--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,18 +14,21 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  firebase_core: ^2.27.0
-  firebase_auth: ^4.17.4
+  firebase_core: ^3.13.0
+  firebase_auth: ^5.5.2
+  cloud_firestore: ^5.6.6
 
-
-  flutter_svg: ^1.0.3
-  lottie: ^1.2.2
-  font_awesome_flutter: ^9.2.0
+  flutter_svg: ^2.1.0
+  lottie: ^3.3.1
+  font_awesome_flutter: ^10.8.0
   
-  webview_flutter_android: ^4.3.4
+  webview_flutter_android: 3.16.9
   webview_flutter_wkwebview: ^3.18.5
-  webview_flutter: ^4.2.2  
+  webview_flutter: 4.2.2  
   mobile_scanner: ^6.0.7
+
+  mongo_dart: ^0.10.0
+  provider: ^6.1.1
 
 
 dev_dependencies:
